--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,12 @@ html {
   -moz-box-sizing: inherit;
   box-sizing: inherit; }
 
-.home .site-content, .page .site-content, .blog .site-content {
+header {
+  text-align: center; }
+
+.home #page, .page #page, .blog #page {
   width: 90%;
-  margin: 0 auto; }
+  margin: 5% auto; }
+
+footer {
+  text-align: center; }
